Uploaded remBoot as base package

--- a/README.Rmd
+++ b/README.Rmd
@@ -1,20 +1,29 @@
-# remBoot: An R package for Random Encounter Modelling
-Anthony Caravaggi  
-
+---
+title: "remBoot: An R package for Random Encounter Modelling"
+author: "Anthony Caravaggi"
+output:  
+      html_document:  
+        keep_md: TRUE 
+---
+```{r, echo = FALSE}
+knitr::opts_chunk$set(
+echo = TRUE, 
+fig.align = "center",
+fig.path = "figure/"
+)
+```
 
 remBoot is an implementation of the Random Encounter Model (REM) developed by Rowcliffe _et al._ (2008). The REM is based on brownian motion and allows the estimation of animal densities for a given survey area. The REM is particularly useful in that species do not need to be marked or exhibit individual markings for estimates to be calculated. This package contains a number of functions which allow the user to calculate densities for one or more sites and bootstrap their data to calculate variance.   
 
 # Installation
 
-
-```r
+```{r install, eval = FALSE}
 devtools::install_github("arcaravaggi/remBoot")
 ```
 
 # Example
 
-
-```r
+```{r EG}
 library(remBoot)
 
 data(hDat)  
@@ -22,42 +31,12 @@ grpDat <- split_dat(hDat)
 tm <- 3600  
 v <- 1.4  
 rem(dat = grpDat[[1]], tm = 3600, v = 1.4)  
-```
-
-```
-## [1] 2.249995
-```
-
-```r
 rem(dat = grpDat[[2]], tm = 3360, v = 1.4)  
-```
 
-```
-## [1] 1.153592
-```
-
-```r
 nboots <- 1000  
 remsD <- lapply(grpDat, boot_sd)   
 remsSD <- lapply(remsD, sd)  
 remsSD  
-```
-
-```
-## [[1]]
-## [1] 0.1198064
-## 
-## [[2]]
-## [1] 0.2090603
-## 
-## [[3]]
-## [1] 0.272623
-## 
-## [[4]]
-## [1] 0.1945102
-## 
-## [[5]]
-## [1] 0.1496215
 ```
 
 A detailed example can be found in the [vignette][vig].
@@ -78,7 +57,7 @@ Please report it to the [issue tracker][issues]. Please provide specific details
 
 # References
 
-Rowcliffe, J.M., Field, J., Turvey, S.T. and Carbone, C. (2008). Estimating animal density using camera traps without the need for individual recognition. J Appl Ecol. 45, 1228 â€“ 1236. [DOI: 10.1111/j.1365-2664.2008.01473.x](http://onlinelibrary.wiley.com/doi/10.1111/j.1365-2664.2008.01473.x/abstract)
+Rowcliffe, J.M., Field, J., Turvey, S.T. and Carbone, C. (2008). Estimating animal density using camera traps without the need for individual recognition. J Appl Ecol. 45, 1228 – 1236. [DOI: 10.1111/j.1365-2664.2008.01473.x](http://onlinelibrary.wiley.com/doi/10.1111/j.1365-2664.2008.01473.x/abstract)
 
 # License
 
